--- a/hair.html
+++ b/hair.html
@@ -68,11 +68,10 @@
                     <h3 class="wl">WE LOVE</h3>
                     <h1 class="oc">OUR CLIENTS</h1>
                     <p class="pw2">
-                        GeneySignature's mission is to provide high quality beauty
-                        products with an unparalleled shopping experience.
-                        Using our world-class technology, we empower beauty professionals
-                        by enabling them to grow their business, while providing them
-                        and their clients with exceptional customer support.
+                        GeneySignature's mission is lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. 
                     </p>
                     <button>CONTACT US</button>
                 </div>
@@ -83,12 +82,10 @@
                     <h3 class="wl">WE LOVE</h3>
                     <h1 class="oc">OUR CLIENTS</h1>
                     <p class="pw2">
-                        GeneySignature's mission is to provide high quality beauty
-                        products with an unparalleled shopping experience.
-                        Using our world-class technology, we empower beauty professionals
-                        by enabling them to grow their business, while providing them
-                        and their clients with exceptional customer support.
-                    </p>
+                        GeneySignature's mission is lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. 
                     <button>CONTACT US</button>
                 </div>
             </div>
@@ -98,11 +95,10 @@
                     <h3 class="wl">WE LOVE</h3>
                     <h1 class="oc">OUR CLIENTS</h1>
                     <p class="pw2">
-                        GeneySignature's mission is to provide high quality beauty
-                        products with an unparalleled shopping experience.
-                        Using our world-class technology, we empower beauty professionals
-                        by enabling them to grow their business, while providing them
-                        and their clients with exceptional customer support.
+                        GeneySignature's mission is lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat.
                     </p>
                     <button>CONTACT US</button>
                 </div>
@@ -125,19 +121,14 @@
             <span class="boldT" id="gs">The <span id="mp">GeneySignatures </span>Story</span>
         </h1>
         <p class="text" id="pw">
-            My name is Mmesoma Ukozor, I am the founder and CEO of GeneySignatures. I grew up watching hairstylists
-            in my family run their businesses, and I noticed something… all of the hair
-            products that our community was buying – we weren’t selling.
-
-            That didn’t sit right with me.
-
-            GeneySignatures began with the idea that if people are spending billions of dollars
-            on beauty products, we should also have ownership in the businesses that sell those products.
-            Furthermore, those products should be of the highest quality
-            and delivered with world-class customer service.
+            My name is Blah Blah Blah, I am the founder and CEO of GeneySignatures. Lorem ipsum dolor sit amet, 
+            consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat.
             <br />
             <br />
-            Mmesomma Ukozor,
+            Blah Blah Blah,
             <br />
             CEO GeneySignatures
         </p>
